// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer getLinkNode returns a Link node 1`] = `
<Text
  onPress={[Function]}
  style={
    {
      "color": "#58a6ff",
      "fontSize": 16,
      "fontStyle": "italic",
      "lineHeight": 24,
    }
  }
>
  Link
</Text>
`;

exports[`Renderer getTextNode returns a Text node 1`] = `
<Text
  style={
    {
      "color": "#333333",
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
>
  Hello world
</Text>
`;

exports[`Renderer getTextNode returns a wrapped Text node 1`] = `
<Text
  style={
    {
      "color": "#333333",
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
>
  <Text
    style={{}}
  >
    Hello world
  </Text>
</Text>
`;

exports[`Renderer getTextNode returns a wrapped Text node with styles 1`] = `
<Text
  style={
    {
      "color": "#333333",
      "fontSize": 16,
      "lineHeight": 24,
    }
  }
>
  <Text
    style={
      {
        "color": "#333333",
        "fontSize": 16,
        "lineHeight": 24,
      }
    }
  >
    Hello world
  </Text>
</Text>
`;
